@@ -4,6 +4,9 @@ Change History
 1.7.7 unreleased
 ----------------
 
+- toolbar position is now fixed
+  [vangheem]
+
 - fix quickedit not working when using form as default view.
   [vangheem]
 
